🐛 Add workaround for Safari wrapping, fixes #32

--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -53,6 +53,7 @@
 				border: 0;
 				border-radius: _size(border-radius);
 				box-shadow: inset 0 0 0 1px transparent;
+				overflow: auto;
 
 				&:hover {
 					background-color: _palette(invert, border-bg);
